--- a/src/style.css
+++ b/src/style.css
@@ -1,9 +1,20 @@
+* {
+	border: 2px dashed black;
+}
+
 body {
 	background: rgb(66 66 66);
+	display: flex;
+	flex-direction: column;
+	align-items: center;
 }
 
 button {
 	border: 1px solid black;
 	border-radius: 4px;
 	padding: 4px;
+}
+
+img {
+	display: flex;
 }
