Add eleCreate utility function to home.js

--- a/src/style.css
+++ b/src/style.css
@@ -14,7 +14,15 @@ H1 {
 	color: hotpink;
 	justify-content: center;
 	font-family: "Roboto Mono";
+}
 
+#taglineContainer {  
+	display: flex;
+	justify-content: center;
+}
+
+#tagline {
+	font-family: "Roboto Mono";
 }
 
 button {
