--- a/src/style.css
+++ b/src/style.css
@@ -1,7 +1,3 @@
-* {
-	border: 2px dashed black;
-}
-
 body {
 	background: rgb(66 66 66);
 	display: flex;
@@ -22,6 +18,7 @@ H1 {
 }
 
 #tagline {
+	color: hotpink;
 	font-family: "Roboto Mono";
 }
 
@@ -33,4 +30,5 @@ button {
 
 img {
 	display: flex;
+	border: 3px solid white;
 }
