Update menu Module
Moved modules into own directory
Add recipe images to own subdirectory
Implement webpacks require.context in menu module to cache images
Add convertPathToTitle() utility function to menu.js
Add appendImages() utility funcition to menu.js
Add styling for menu elements

--- a/src/style.css
+++ b/src/style.css
@@ -12,6 +12,17 @@ H1 {
 	font-family: "Roboto Mono", serif;
 }
 
+h2 {
+	display: flex;
+	color: hotpink;
+	justify-content: center;
+	font-family: "Roboto Mono", serif;
+}
+
+.dish {
+	padding: 1rem 0 3rem 0;
+}
+
 #taglineContainer {  
 	display: flex;
 	justify-content: center;
